// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingOverlay 组件 > 快照测试 - 显示状态 1`] = `
<div>
  <div
    class="loading-overlay"
  >
    <div
      class="loading-content"
    >
      <div
        class="loading-spinner-wrapper"
      >
        <div
          class="loading-orb"
          style="width: 56px; height: 56px;"
        />
        <style>
          
        .loading-spinner-wrapper {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
          padding: 20px;
        }
        .loading-text {
          margin-top: 12px;
          color: #666;
          font-size: 14px;
        }
      
        </style>
      </div>
      <div
        class="loading-text"
      >
        处理中...
      </div>
    </div>
    <style>
      
        .loading-overlay {
          position: fixed;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
          background: rgba(255, 255, 255, 0.8);
          display: flex;
          align-items: center;
          justify-content: center;
          z-index: 9999;
        }
        .loading-content {
          display: flex;
          flex-direction: column;
          align-items: center;
          background: white;
          padding: 32px 48px;
          border-radius: 12px;
          box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
        }
        .loading-text {
          margin-top: 16px;
          color: #333;
          font-size: 16px;
        }
      
    </style>
  </div>
</div>
`;

exports[`LoadingSpinner 组件 > 快照测试 - 带文本和自定义颜色 1`] = `
<div>
  <div
    class="loading-spinner-wrapper"
  >
    <div
      class="loading-orb"
      style="width: 56px; height: 56px; border-top-color: rgb(59, 130, 246);"
    />
    <div
      class="loading-text"
    >
      请稍候...
    </div>
    <style>
      
        .loading-spinner-wrapper {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
          padding: 20px;
        }
        .loading-text {
          margin-top: 12px;
          color: #666;
          font-size: 14px;
        }
      
    </style>
  </div>
</div>
`;

exports[`LoadingSpinner 组件 > 快照测试 - 默认状态 1`] = `
<div>
  <div
    class="loading-spinner-wrapper"
  >
    <div
      class="loading-orb"
      style="width: 40px; height: 40px;"
    />
    <style>
      
        .loading-spinner-wrapper {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
          padding: 20px;
        }
        .loading-text {
          margin-top: 12px;
          color: #666;
          font-size: 14px;
        }
      
    </style>
  </div>
</div>
`;

exports[`PageLoading 组件 > 快照测试 - 加载完成后 1`] = `
<div>
  <div
    class="page-loading"
  >
    <div
      class="loading-spinner-wrapper"
    >
      <div
        class="loading-orb"
        style="width: 56px; height: 56px;"
      />
      <div
        class="loading-text"
      >
        页面加载中...
      </div>
      <style>
        
        .loading-spinner-wrapper {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
          padding: 20px;
        }
        .loading-text {
          margin-top: 12px;
          color: #666;
          font-size: 14px;
        }
      
      </style>
    </div>
    <style>
      
        .page-loading {
          display: flex;
          align-items: center;
          justify-content: center;
          min-height: 300px;
        }
      
    </style>
  </div>
</div>
`;

exports[`SkeletonTable 组件 > 快照测试 - 默认配置 1`] = `
<div>
  <div
    class="skeleton-table-wrapper"
  >
    <div
      class="skeleton-table"
    >
      <div
        class="skeleton-header-row"
      >
        <div
          class="skeleton-cell skeleton-header-cell"
        />
        <div
          class="skeleton-cell skeleton-header-cell"
        />
        <div
          class="skeleton-cell skeleton-header-cell"
        />
        <div
          class="skeleton-cell skeleton-header-cell"
        />
      </div>
      <div
        class="skeleton-row"
      >
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
      </div>
      <div
        class="skeleton-row"
      >
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
      </div>
      <div
        class="skeleton-row"
      >
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
      </div>
      <div
        class="skeleton-row"
      >
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
      </div>
      <div
        class="skeleton-row"
      >
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
        <div
          class="skeleton-cell"
        />
      </div>
    </div>
    <style>
      
        .skeleton-table-wrapper {
          width: 100%;
        }
        .skeleton-table {
          width: 100%;
          border: 1px solid #e8e8e8;
          border-radius: 8px;
          overflow: hidden;
        }
        .skeleton-header-row {
          display: flex;
          background: #fafafa;
          border-bottom: 1px solid #e8e8e8;
        }
        .skeleton-row {
          display: flex;
          border-bottom: 1px solid #e8e8e8;
        }
        .skeleton-row:last-child {
          border-bottom: none;
        }
        .skeleton-cell {
          flex: 1;
          height: 40px;
          margin: 12px 16px;
        }
        .skeleton-header-cell {
          height: 16px;
          margin: 12px 16px;
        }
      
    </style>
  </div>
</div>
`;

exports[`UnifiedSkeletonCard 组件 > 快照测试 - 自定义数量 1`] = `
<div>
  <div
    class="skeleton-card-grid"
  >
    <div
      class="job-card skeleton"
    >
      <div
        class="skeleton-text"
        style="width: 60%; height: 20px;"
      />
      <div
        class="skeleton-text"
        style="width: 80%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 100%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 40%; margin-top: 10px;"
      />
    </div>
    <div
      class="job-card skeleton"
    >
      <div
        class="skeleton-text"
        style="width: 60%; height: 20px;"
      />
      <div
        class="skeleton-text"
        style="width: 80%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 100%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 40%; margin-top: 10px;"
      />
    </div>
    <div
      class="job-card skeleton"
    >
      <div
        class="skeleton-text"
        style="width: 60%; height: 20px;"
      />
      <div
        class="skeleton-text"
        style="width: 80%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 100%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 40%; margin-top: 10px;"
      />
    </div>
    <div
      class="job-card skeleton"
    >
      <div
        class="skeleton-text"
        style="width: 60%; height: 20px;"
      />
      <div
        class="skeleton-text"
        style="width: 80%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 100%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 40%; margin-top: 10px;"
      />
    </div>
  </div>
</div>
`;

exports[`UnifiedSkeletonCard 组件 > 快照测试 - 默认数量 1`] = `
<div>
  <div
    class="skeleton-card-grid"
  >
    <div
      class="job-card skeleton"
    >
      <div
        class="skeleton-text"
        style="width: 60%; height: 20px;"
      />
      <div
        class="skeleton-text"
        style="width: 80%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 100%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 40%; margin-top: 10px;"
      />
    </div>
    <div
      class="job-card skeleton"
    >
      <div
        class="skeleton-text"
        style="width: 60%; height: 20px;"
      />
      <div
        class="skeleton-text"
        style="width: 80%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 100%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 40%; margin-top: 10px;"
      />
    </div>
    <div
      class="job-card skeleton"
    >
      <div
        class="skeleton-text"
        style="width: 60%; height: 20px;"
      />
      <div
        class="skeleton-text"
        style="width: 80%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 100%; margin-top: 10px;"
      />
      <div
        class="skeleton-text"
        style="width: 40%; margin-top: 10px;"
      />
    </div>
  </div>
</div>
`;
